--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "homepage": "http://blksmk8483.github.io/React-Portfolio",
+  "homepage": "https://blksmk8483.github.io/React-Portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
